<resources>
    <string name="app_name">Sandbox</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_current_place">Current Place</string>
    <string name="option_get_place">Get place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_current_location">Current Location</string>
    <string name="title_activity_location_updates">Location Updates</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="launch_activity">Launch activity</string>
    <string name="ok">OK</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="distance_tracker">Distance Tracker</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="broadcast">Broadcast</string>
    <string name="send_broadcast">Send broadcast</string>
    <string name="register_receiver">Register receiver</string>
    <string name="unregister_receiver">Unregister receiver</string>
    <string name="type_massage">Type your message here</string>
    <string name="default_message">Default message</string>
    <string name="repeating">Repeating</string>
    <string name="cancel">Cancel</string>
    <string name="seconds">Seconds</string>
    <string name="default_seconds_value">5</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="default_notification_channel_id" translatable="false">sandbox_notification_channel_id</string>
    <string name="default_notification_channel_name" translatable="true">Sandbox Notification Channel Name</string>
    <string name="firebase_cloud_messaging">Firebase Cloud Messaging</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO SANDBOX button below to subscribe to the sandbox topic. Messages sent to the sandbox topic will be received. The LOG TOKEN button logs the InstanceID token to logcat.</string>
    <string name="subscribe_to_sandbox">Subscribe To Sandbox</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to sandbox topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to sandbox topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="fcm_message">FCM Message</string>
</resources>
