<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".ui.bc.BcActivity">

    <Button
        android:id="@+id/bc_register_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_green_light"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/register_receiver"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="@+id/bc_unregister_button"
        app:layout_constraintEnd_toStartOf="@+id/bc_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bc_unregister_button" />

    <Button
        android:id="@+id/bc_unregister_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_purple"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/unregister_receiver"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="italic"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bc_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/bc_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bc_register_button">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/bc_message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_massage"
            android:singleLine="false"
            android:text="@string/default_message"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textColor="@color/colorControlHighlight"
            android:typeface="monospace" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bc_send_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light"
        android:fontFamily="casual"
        android:text="@string/send_broadcast"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</android.support.constraint.ConstraintLayout>